--- a/index.html
+++ b/index.html
@@ -1,33 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="./CSS/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="stylesheet" href="./CSS/style.css">
 </head>
+
 <body>
-<section>
-    <nav class="navbar navbar-expand-lg" style="background-color: #4F634A;">
-  <div class="container-fluid">
-    <img src="./imagens/logo.png" alt="">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Cardapio</a>
-        <a class="nav-link" href="#">Sobre</a>
-        <a class="nav-link" href="#">Contato</a>
+  <section>
+    <nav class="navbar navbar-expand-lg" style="background-color: #F5F5DC;" id="head">
+      <div class="container d-flex justify-content-between align-items-center">
+        <img src="./imagens/logo.png" alt="">
+        <div class="navbar-nav">
+          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="#">Cardapio</a>
+          <a class="nav-link" href="#">Sobre</a>
+          <a class="nav-link" href="#">Contato</a>
+        </div>
+      </div>
+    </nav>
+  </section>
+
+  <section>
+    <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./imagens/espaço4.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./imagens/espaço3.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./imagens/espaço2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./imagens/espaço.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
+
+  <section id="about">
+    <div id="boxAbout">
+      <div id="contextAbout">
+        <h1>
+          Sobre Nós
+        </h1>
+      </div>
+      <div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo commodi voluptates atque ab, autem voluptatum
+          ullam itaque! Quis sed rerum similique quae facilis, distinctio impedit repudiandae. Voluptatum, ab? Voluptas,
+          provident!</p>
       </div>
     </div>
-  </div>
-</nav>
-</section>
 
-    
+<div >
+  <div>
+    <div>Missão</div>
+    <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor, inventore.</div>
+  </div>
+
+  <div>
+    <div>Valores</div>
+    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, ut.</div>
+  </div>
+
+  <div>
+    <div>Objetivo</div>
+    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, ut.</div>
+  </div>
+</div>
+  </section>
+
+
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
 </html>
